fixed some more gaps

--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -419,7 +419,7 @@ a {
   justify-items: stretch;
   align-items: stretch;
   column-gap: 1rem;
-  row-gap: 0.5rem;
+  row-gap: 0.25rem;
   /**/
   background-color: @resultpage-background-color;
 
@@ -445,6 +445,7 @@ a {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    padding-top: 1rem;
 
     > span[name="top"] {
       display: none;
@@ -453,7 +454,7 @@ a {
     #results {
       display: flex;
       flex-direction: column;
-      gap: 1.5rem;
+      gap: 1.25rem;
       .alteration {
         margin: (@padding-small-default * 2) 0px;
         margin-top: 0;
@@ -503,12 +504,18 @@ a {
           gap: 0.5rem;
           justify-content: center;
           padding: 0.5rem 1rem;
+          flex-wrap: wrap;
           > .engine {
             color: fade(@text-color, 70%);
             font-size: 0.8rem;
             border-radius: 10px;
+            white-space: nowrap;
+
             &.disabled-by-configuration {
               cursor: copy;
+            }
+            > a {
+              cursor: inherit;
             }
           }
         }
@@ -634,7 +641,7 @@ a {
     max-width: @results-width-max;
     background-color: @resultpage-background-color;
     overflow-x: auto;
-    padding: 8px;
+    padding-bottom: 8px;
     border-bottom: 1px solid @border-color;
 
     @media (max-width: @screen-mobile) {
@@ -698,7 +705,6 @@ a {
 
   .scrollbox {
     max-height: 0;
-    padding: 0.5rem 0;
     transform-origin: top;
     transform: scaleY(0);
     transition: transform 0.5s, max-height 0.5s;
@@ -754,7 +760,8 @@ a {
     justify-content: left;
     overflow: hidden;
     overflow-x: auto;
-    padding-top: 8px;
+    padding-bottom: 8px;
+    border-bottom: 1px solid @border-color;
 
     #options-items {
       display: -ms-flexbox;
