--- a/metager/resources/less/metager/pages/resultpage/result.less
+++ b/metager/resources/less/metager/pages/resultpage/result.less
@@ -348,6 +348,7 @@
 
         li {
           font-size: 0.85em;
+          padding-bottom: 0.25rem;
         }
 
         @media (max-width: @screen-mobile) {
